# embedded-skeleton

./: CMakeLists.txt
sources/common/: CMakeLists.txt  readme.txt
sources/common/RuntimeError/: CMakeLists.txt  RuntimeError.c  RuntimeError.h
sources/drivers/: readme.txt
sources/drivers/LedDriver/: CMakeLists.txt  LedDriver.c  LedDriver.h
sources/main/: CMakeLists.txt  main.c
sources/modules/: readme.txt
sources/tests/LedDriver/: CMakeLists.txt  LedDriverTest.c  LedDriverTestRunner.c
